@@ -24,6 +24,8 @@ AssemblePairs:
 + Added support for cases where one mate pair is the subsequence of the other.
 + Added --scanrev flag to allow for head sequence to overhand end of tail.
 + Removed truncated (quick) error calculation in align subcommand.
++ Changed default values of the --maxerror and --alpha arguments of the align
+  subcommand to better tuned parameters.
 + Changed internal selection of top scoring alignment to use Z-score
   approximation rather than a combination of error rate and binomial
   mid-p value.
